- Add project website URL at README

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ from multiple database search engines
 
 Authors: Taejoon Kwon
          Hyungwon Choi
+
+See http://www.marcottelab.org/index.php/MSblender for more information.
