--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+
+## OUTDATED BRANCH
+
+## git checkout consistent_search_params or later
+
 MSblender: a probabilistic approach for integrating peptide identifications
 from multiple database search engines
 
